# OS

Lab4/: CMakeLists.txt  MatrixMultiply.cpp  MatrixMultiply.h  Vector.cpp  Vector.h  main.cpp
Laba1/Number/: Number.sln
Laba1/Number/Number/: Number.cpp  (+2 more)
Laba1/TestLab1/: TestLab1.sln
Laba1/Vector/: Vector.sln
Laba2/TestLab2/: main.cpp
Laba3/Number/: Number.cpp
Laba3/TestLab2/: CMakeLists.txt  Laba3Script.sh  a.out  main
Laba3/TestLab2/Number/: CMakeLists.txt  Number.h
Laba3/TestLab2/Vector/: CMakeLists.txt  Vector.h
Laba3/Vector/: Vector.cpp
Laba5/: BufferedChannel.h  CMakeLists.txt  main.cpp
Laba6/: BufferedChannel.h  CMakeLists.txt  MatrixMultiply.cpp  MatrixMultiply.h  Vector.cpp  main.cpp
LinuxMultithreading/: CMakeLists.txt  MatrixMultiply.cpp  MatrixMultiply.h  Vector.cpp  Vector.h  main.cpp
LinuxPipes/A/: main.cpp
LinuxPipes/M/: CMakeLists.txt  main.cpp
LinuxPipes/P/: CMakeLists.txt  main.cpp
LinuxPipes/Pipeline/: CMakeLists.txt  main.cpp
LinuxPipes/S/: CMakeLists.txt  main.cpp
LinuxProcess/Killer/: CMakeLists.txt  main.cpp
LinuxProcess/User/: CMakeLists.txt  main.cpp
WindowsMultithreading/: WindowsMultithreading.sln
WindowsMultithreading/WindowsMultithreading/: MatrixMultiply.cpp  MatrixMultiply.h  Vector.cpp  Vector.h  WindowsMultithreading.cpp  WindowsMultithreading.vcxproj  WindowsMultithreading.vcxproj.filters
WindowsPipes/A/: A.sln
WindowsPipes/M/: M.sln
WindowsPipes/P/: P.sln
WindowsPipes/Pipeline/: Pipeline.sln
WindowsPipes/S/: S.sln
WindowsProcess/Killer/: Killer.sln
WindowsProcess/User/: User.sln
(+132 files in other folders)
